<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>io.mosip.testrig.dslrig.ivv</groupId>
		<artifactId>dslrig-ivv-parent</artifactId>
		<version>1.2.1-java21-SNAPSHOT</version>
	</parent>

	<groupId>io.mosip.testrig.dslrig.ivv.orchestrator</groupId>
	<artifactId>dslrig-ivv-orchestrator</artifactId>
	<name>mosip-dsl-test</name>
	<version>1.2.1-java21-SNAPSHOT</version>
	<properties>
		<suiteXmlFile>testng.xml</suiteXmlFile>
		<maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>make-jar-executable</id>
						<phase>package</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<target>
								<!-- Create a shell script to run the JAR file
								with executable permission -->
								<chmod file="${project.build.directory}/*.jar"
									perm="ugo+rx" />
							</target>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
					<argLine>-Dfile.encoding=UTF-8</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<executions>
					<execution>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<finalName>
								dslrig-ivv-orchestrator-1.2.1-java21-SNAPSHOT-jar-with-dependencies</finalName>
							<transformers>
								<!-- need this to merge the services files
								properly -->
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
								<!-- add Main-Class to manifest file -->
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>
										io.mosip.testrig.dslrig.ivv.orchestrator.TestRunner</mainClass>
								</transformer>
							</transformers>
							<!-- add this to prevent some security issues when
							merging everything 
								together -->
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<!--   core dependencies     -->
		<dependency>
			<groupId>io.mosip.testrig.dslrig.ivv.core</groupId>
			<artifactId>dslrig-ivv-core</artifactId>
			<version>1.2.1-java21-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.testrig.dslrig.ivv.dg</groupId>
			<artifactId>dslrig-ivv-dg</artifactId>
			<version>1.2.1-java21-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>3.0.7</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>io.mosip.testrig.apirig.apitest.commons</groupId>
			<artifactId>apitest-commons</artifactId>
			<version>1.2.2-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<groupId>com.sun.jersey</groupId>
					<artifactId>jersey-client</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-reload4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.mosip.esignet</groupId>
			<artifactId>apitest-esignet</artifactId>
			<version>1.2.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.authentication</groupId>
			<artifactId>apitest-auth</artifactId>
			<version>1.2.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.masterdata</groupId>
			<artifactId>apitest-masterdata</artifactId>
			<version>1.2.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.resident</groupId>
			<artifactId>apitest-resident</artifactId>
			<version>1.2.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.slack.api</groupId>
			<artifactId>slack-api-client</artifactId>
			<version>1.6.1-RC1</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-biometrics-api</artifactId>
			<version>1.2.1-SNAPSHOT</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.cache/cache-api -->
		<dependency>
			<groupId>javax.cache</groupId>
			<artifactId>cache-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.ehcache</groupId>
			<artifactId>jcache</artifactId>
			<version>1.0.0</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-batch</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
		</dependency>
		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.mosip.kernel</groupId>
				<artifactId>kernel-bom</artifactId>
				<version>1.2.1-java21-SNAPSHOT</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<profiles>
		<profile>
			<id>sonar</id>
			<properties>
			
					<!-- Spring version -->
		<spring.version>5.0.6.RELEASE</spring.version>

		<spring.boot.version>2.0.2.RELEASE</spring.boot.version>
		<spring.data.jpa.version>2.0.7.RELEASE</spring.data.jpa.version>
		<spring.security.test.version>5.0.5.RELEASE</spring.security.test.version>
		<spring-cloud-config.version>2.0.0.RELEASE</spring-cloud-config.version>

		<swagger.core.version>2.0.7</swagger.core.version>
		<swagger.annotations.version>1.5.20</swagger.annotations.version>
		<springfox.version>2.9.2</springfox.version>

		<vertx.version>3.6.2</vertx.version>
		<vertx.health.check.version>3.7.0</vertx.health.check.version>

				<sonar.sources>.</sonar.sources>
				<sonar.inclusions>src/main/java/**,src/main/resources/**</sonar.inclusions>
				<sonar.exclusions>${sonar.coverage.exclusions}</sonar.exclusions>
				<sonar.host.url>https://sonarcloud.io</sonar.host.url>
			</properties>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonarsource.scanner.maven</groupId>
						<artifactId>sonar-maven-plugin</artifactId>
						<version>${maven.sonar.plugin.version}</version>
						<executions>
							<execution>
								<phase>verify</phase>
								<goals>
									<goal>sonar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
